# Real-Time-S.I.E.M-System

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  ReadMe.md  SETUP_GUIDE.md  SIEMAnalyzer.jsx  check_installation.py  check_structure.py  config.py  create_all_stubs.py  demo_siem.py  docker-compose.yml  final_check.py  fix_imports.py  migrate_all_files.py  migrate_to_package.py  package.json  pyproject.toml  quickstart.sh  requirements.txt  run  setup.py  setup_production.sh  siem_analyzer.py  test_cli.py  test_complete_system.py  test_final.py  test_fixed.py  test_reliable.py  test_simple.py  test_working.py
.github/workflows/: ci.yml  component-tests.yml  dependencies.yml  docker.yml  integration.yml  main.yml  publish.yml  security.yml
config/: advanced_detection_rules.yaml  detection_rules.yaml  siem_config.yaml
config/logstash/: pipelines.yml
config/logstash/conf.d/: siem-pipeline.conf
data/: sample_logs.txt
docs/: COMMANDS.md  COMPLETE_SYSTEM.md  DEVELOPMENT_GUIDE.md  GETTING_STARTED.md  PRODUCTION_GUIDE.md  SETUP_COMPLETE.md  index.html
models/: ml_anomaly_detector.pkl
scripts/: collect_web_data.py  demo.py  ml_anomaly_detector.py  monitor.py  run_dashboard.py  run_live_dashboard.py
src/realtime_siem/: __init__.py  main.py
src/realtime_siem/alerts/: alert_manager.py  notification_handler.py
src/realtime_siem/config/: config_manager.py
src/realtime_siem/core/: __init__.py  correlation_engine.py  event_processor.py  siem_engine.py
tests/: test_basic.py
(+9 files in other folders)
