[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-siem"
dynamic = ["version"]
description = "Real-Time Security Information and Event Management System"
authors = [
    {name = "Arvind", email = "your-email@example.com"},
]
dependencies = [
    "elasticsearch>=7.0.0,<8.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pyyaml>=5.4.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "tabulate>=0.8.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
siem-start = "siem_core.main:main"
siem-configure = "config.config_manager:main"

[tool.setuptools_scm]
write_to = "src/realtime_siem/_version.py"